--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ##Local
-spring.datasource.url=jdbc:mysql://localhost:3306/ad_1985960950d7006
+spring.datasource.url=jdbc:mysql://localhost:3306/schema
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.max-active=1
@@ -11,9 +11,9 @@ hibernate.hbm2ddl.auto: update
 entitymanager.packagesToScan: com.svm
 
 #spring.datasource-cloud
-cloud.spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-03.cleardb.net/ad_1985960950d7006
-cloud.spring.datasource.username=b6ab8df42926e0
-cloud.spring.datasource.password=afb4102cc05ee37
+cloud.spring.datasource.url=jdbc:mysql://domain/
+cloud.spring.datasource.username=
+cloud.spring.datasource.password=
 cloud.spring.datasource.max-active=4
 
 # spring JPA repository config
